--- a/gw/components/ibex/CMakeLists.txt
+++ b/gw/components/ibex/CMakeLists.txt
@@ -1,9 +1,3 @@
-#Code generate the ibex core.
-execute_process(
-    COMMAND
-      ${PROJECT_SOURCE_DIR}/scripts/gen_ibex_core.sh ${PROJECT_SOURCE_DIR}/sub/ibex ${CMAKE_BINARY_DIR}/codegen/ibex
-)
-
 #Add a rule so the core can be regenerated using make gen_ibex_core
 add_custom_target(gen_ibex_core
       COMMAND
@@ -12,6 +6,9 @@ add_custom_target(gen_ibex_core
         "Code generate the ibex core."
       VERBATIM
   )
+
+#Add gen_ibex_core to to gateware codegeneration dependency list.
+add_dependencies(gw_codegen gen_ibex_core)
 
 #gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
