imem-to-flash-vector image no longer checked into source tree.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,11 @@ add_custom_target(regen
     VERBATIM
 )
 
+#A gateware codegeneration target. Components that require
+#code generation will add their codegeneration target as a
+#dependency to this target.
+add_custom_target(gw_codegen)
+
 enable_testing()
 
 #The software tree
