--- a/gw/components/ibex/CMakeLists.txt
+++ b/gw/components/ibex/CMakeLists.txt
@@ -7,7 +7,7 @@ add_custom_target(gen_ibex_core
       VERBATIM
   )
 
-#Add gen_ibex_core to to gateware codegeneration dependency list.
+#Add gen_ibex_core to the gateware codegeneration dependency list.
 add_dependencies(gw_codegen gen_ibex_core)
 
 #gw_component_rules() function is defined in the parent CMakeLists.txt.
