--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -70,4 +70,5 @@ add_subdirectory(reset_test)
 add_subdirectory(dfx_test)
 add_subdirectory(invalid_address)
 add_subdirectory(ibex_perf_test)
+add_subdirectory(ulisp)
 
