customized c header template

--- a/registers/definitions/reset.config
+++ b/registers/definitions/reset.config
@@ -8,7 +8,7 @@ force_name_case = none
 [c_header]
 path = ./generated/reset_regs.h
 prefix = RESET
-generator = CHeader
+generator = ./generators/c_nocstd_generator.py::CHeaderNoCstd
 
 [md_doc]
 path = ./generated/reset_regs.md
@@ -21,4 +21,4 @@ generator = Markdown
 [asm]
 path = ./generated/reset_regs.s
 prefix = RESET
-generator = ./generators/regmap_asm_generator.py::AsmGenerator
+generator = ./generators/asm_generator.py::AsmGenerator
