--- a/registers/definitions/uart.config
+++ b/registers/definitions/uart.config
@@ -8,7 +8,7 @@ force_name_case = none
 [c_header]
 path = ./generated/uart_regs.h
 prefix = UART
-generator = CHeader
+generator = ./generators/c_nocstd_generator.py::CHeaderNoCstd
 
 [md_doc]
 path = ./generated/uart_regs.md
@@ -21,4 +21,4 @@ generator = Markdown
 [asm]
 path = ./generated/uart_regs.s
 prefix = UART
-generator = ./generators/regmap_asm_generator.py::AsmGenerator
+generator = ./generators/asm_generator.py::AsmGenerator
