Switched GPIO to Corsair generated register access layer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,11 @@ endif()
 
 message("Build Type: ${CMAKE_BUILD_TYPE}.")
 
+#A codegeneration target. Components that require
+#code generation will add their codegeneration target as a
+#dependency to this target.
+add_custom_target(cgen)
+
 #make regen rule, to complete remove and regenerate the build tree.
 add_custom_target(regen
     WORKING_DIRECTORY
@@ -33,17 +38,17 @@ add_custom_target(regen
         rm -rf sw && rm -rf gw
     COMMAND
         ${CMAKE_COMMAND} .
+    DEPENDS
+        codegen
     COMMENT
         "Removing and regenerating build tree."
     VERBATIM
 )
 
-#A gateware codegeneration target. Components that require
-#code generation will add their codegeneration target as a
-#dependency to this target.
-add_custom_target(gw_codegen)
-
 enable_testing()
+
+#The registers tree
+add_subdirectory(registers)
 
 #The software tree
 add_subdirectory(sw)
