--- a/sw/components/gpio/CMakeLists.txt
+++ b/sw/components/gpio/CMakeLists.txt
@@ -14,4 +14,5 @@ target_compile_options(gpio
 target_include_directories(gpio
     PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}
+        ${PROJECT_SOURCE_DIR}/registers/generated/
 )
