--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,25 +32,19 @@ nav:
     - About: index.md
     - Terms and Abbreviations: terms-and-abbreviations.md
     - Requirement Analysis: requirement-analysis.md
-    - Architecture: architecture.md
-    - Clocks and Reset: clocks_and_reset.md
-    - Interrupts: interrupts.md
-    - LEDs: leds.md
-    - FPGA Resource Utilization: fpga-resource-utilization.md
-    - Git Workflow: git-workflow.md
-    - The Build System:
-        - The Build System Structure:
-          - The Directory Structure: build_sys_dir_struct.md
-          - The Gateware Build Structure: build_sys_gw_build_struct.md
-          - The CMakeLists: build_sys_cmakelists.md
-        - Using the Build System:
-          - Building the Gateware: build_sys_building_gw.md
-          - Building the Software: build_sys_building_sw.md
-          - Make All, Clean, and Regen: build_sys_make_all_etc.md
-    - The Test Bench:
-        - The Test Bench: test-bench.md
-        - The System-Level Test Bench: test-bench-system-level.md
-        - The Component-Level Test Bench: test-bench-component-level.md
+    - Installation:
+        - Prerequisites: prerequisites.md
+        - Peripherals (PMODs): pmods.md
+        - Installation and Activation: installation_and_activation.md
+    - Top-Level:
+        - Architecture: architecture.md
+        - Clocks and Reset: clocks_and_reset.md
+        - Interrupts: interrupts.md
+        - LEDs: leds.md
+    - Register Map:
+        - Reset: registers/generated/reset_regs.md
+        - UART: registers/generated/uart_regs.md
+        - GPIO: registers/generated/gpio_regs.md
     - Gateware Components:
         - BoxLambda SoC: components_boxlambda_soc.md
         - Wishbone Interconnect: components_wb_interconnect.md
@@ -63,7 +57,7 @@ nav:
         - SPI Flash Controller: components_spiflash.md
         - Dual YM2149 PSG Sound Core: components_dual_ym2149.md
         - USB HID Keyboard and Mouse: components_usb_hid.md
-        - Serial Port: components_serial.md
+        - UART: components_uart.md
         - GPIO: components_gpio.md
         - Timer: components_timer.md
         - I2C: components_i2c.md
@@ -79,6 +73,7 @@ nav:
         - USB HID: sw_comp_usb_hid.md
         - Flash Driver: sw_comp_flashdrvr.md
         - Timer: sw_comp_timer.md
+        - UART: sw_comp_uart.md
         - RISC-V: sw_comp_riscv.md
         - Interrupt Handling: sw_comp_irqs.md
         - I2C: sw_comp_i2c.md
@@ -90,10 +85,21 @@ nav:
         - DFX Controller HAL: sw_comp_dfx_controller_hal.md
         - J1B HAL: sw_comp_j1b_hal.md
         - VS0 HAL: sw_comp_vs0_hal.md
-    - Installation:
-        - Prerequisites: prerequisites.md
-        - Peripherals (PMODs): pmods.md
-        - Installation and Activation: installation_and_activation.md
+    - FPGA Resource Utilization: fpga-resource-utilization.md
+    - Git Workflow: git-workflow.md
+    - The Build System:
+        - The Build System Structure:
+          - The Directory Structure: build_sys_dir_struct.md
+          - The Gateware Build Structure: build_sys_gw_build_struct.md
+          - The CMakeLists: build_sys_cmakelists.md
+        - Using the Build System:
+          - Building the Gateware: build_sys_building_gw.md
+          - Building the Software: build_sys_building_sw.md
+          - Make All, Clean, and Regen: build_sys_make_all_etc.md
+    - The Test Bench:
+        - The Test Bench: test-bench.md
+        - The System-Level Test Bench: test-bench-system-level.md
+        - The Component-Level Test Bench: test-bench-component-level.md
     - Project Builds:
         - BoxLambda Base: prj_build_boxlambda_base.md
         - BoxLambda DFX: prj_build_boxlambda_dfx.md
