Adjust to mtimer, uart, gpio, usb, i2c register access layer.

--- a/registers/CMakeLists.txt
+++ b/registers/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(register_modules uart reset gpio)
+set(register_modules uart reset gpio mtimer i2c_master usb_hid)
 
 #A codegeneration rule to generate the register access layer
 add_custom_target(registers
