--- a/sw/components/usb_hid/CMakeLists.txt
+++ b/sw/components/usb_hid/CMakeLists.txt
@@ -15,4 +15,5 @@ target_compile_options(usb_hid
 target_include_directories(usb_hid
     PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}
+        ${PROJECT_SOURCE_DIR}/registers/generated/
 )
