add sdspi sw component and register access layer

--- a/sw/components/CMakeLists.txt
+++ b/sw/components/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(bootstrap)
 add_subdirectory(sdram)
 add_subdirectory(vera)
+add_subdirectory(sdspi)
 add_subdirectory(fatfs)
 add_subdirectory(stsound)
 add_subdirectory(j1b_hal)
