--- a/sw/components/fatfs/CMakeLists.txt
+++ b/sw/components/fatfs/CMakeLists.txt
@@ -7,8 +7,7 @@ target_sources(fatfs
     ../../../sub/fatfs/source/ff.c
     ../../../sub/fatfs/source/ffsystem.c
     ../../../sub/fatfs/source/ffunicode.c
-    ../../../sub/sdspi/sw/diskio.c
-    ../../../sub/sdspi/sw/sdcard.c
+    diskio.c
 )
 
 target_compile_definitions(fatfs
@@ -25,6 +24,7 @@ target_compile_options(fatfs
 target_include_directories(fatfs
     PUBLIC
     ${PROJECT_SOURCE_DIR}/sub/fatfs/source #Paths to include files users of fatfs are expected to use.
-    PRIVATE
-    ${PROJECT_SOURCE_DIR}/sub/sdspi/sw/
 )
+
+target_link_libraries(fatfs sdspi)
+
