Add VERA to register map.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
         - USB_HID_1: registers/generated/usb_hid_1_regs.md
         - SDSPI: registers/generated/sdspi_regs.md
         - SPIFlash: registers/generated/spiflash_regs.md
+        - VERA: registers/generated/vera_regs.md
     - Gateware Components:
         - BoxLambda SoC: components_boxlambda_soc.md
         - Wishbone Interconnect: components_wb_interconnect.md
@@ -78,6 +79,7 @@ nav:
         - FatFs: sw_comp_fat_fs.md
         - ST-Sound: sw_comp_st_sound.md
         - YM2149 HAL: sw_comp_ym2149_hal.md
+        - VERA HAL: sw_comp_vera_hal.md
         - USB HID: sw_comp_usb_hid.md
         - Flash Driver: sw_comp_flashdrvr.md
         - Timer: sw_comp_timer.md
