Add ym2149 to register map.

--- a/sw/projects/stsound_test/CMakeLists.txt
+++ b/sw/projects/stsound_test/CMakeLists.txt
@@ -8,8 +8,7 @@ add_executable(stsound_test_ram
 
 target_include_directories(stsound_test_ram
     PRIVATE
- ${PROJECT_SOURCE_DIR}/sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/
- ${PROJECT_SOURCE_DIR}/sw/components/ym2149_sys_hal/
+      ${PROJECT_SOURCE_DIR}/registers/generated/
 )
 
 target_compile_options(stsound_test_ram
@@ -38,8 +37,7 @@ add_executable(stsound_test_flsh
 
 target_include_directories(stsound_test_flsh
     PRIVATE
-     ${PROJECT_SOURCE_DIR}/sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/
-     ${PROJECT_SOURCE_DIR}/sw/components/ym2149_sys_hal/
+      ${PROJECT_SOURCE_DIR}/registers/generated/
 )
 
 target_compile_options(stsound_test_flsh
