--- a/registers/CMakeLists.txt
+++ b/registers/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(register_modules uart reset gpio mtimer i2c_master usb_hid sdspi spiflash
-vera)
+vera ym2149)
 
 #A codegeneration rule to generate the register access layer
 add_custom_target(registers
