--- a/registers/definitions/dfx_controller_other.config
+++ b/registers/definitions/dfx_controller_other.config
@@ -6,19 +6,19 @@ address_alignment = data_width
 force_name_case = none
 
 [c_header]
-path = ./generated/dfx_controller_regs.h
-prefix = DFX
+path = ./generated/dfx_controller_other_regs.h
+prefix = DFX_OTHER
 generator = ./generators/c_nocstd_generator.py::CHeaderNoCstd
 
 [md_doc]
-path = ./generated/dfx_controller_regs.md
-title = DFX Controller Register map
+path = ./generated/dfx_controller_other_regs.md
+title = DFX Controller other registers map
 print_images = True
 image_dir = md_img
 print_conventions = True
 generator = Markdown
 
 [asm]
-path = ./generated/dfx_controller_regs.s
+path = ./generated/dfx_controller_other_regs.s
 prefix = DFX
 generator = ./generators/asm_generator.py::AsmGenerator
