More consistent use of .cpp

--- a/sw/components/dfx/CMakeLists.txt
+++ b/sw/components/dfx/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(dfx)
 
 target_sources(dfx
     PRIVATE
-    dfx_controller_hal.c
+    dfx_controller_hal.cpp
 )
 
 target_compile_options(dfx
